Buy and Sell button in the menu page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,30 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.m6.views.ConfigurationActivity" />
-        <activity android:name="com.example.m6.views.MainActivity">
+        <activity android:name=".views.ConfigurationActivity" />
+        <activity android:name=".views.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.example.m6.views.UniverseActivity"></activity>
+        <activity
+            android:name=".views.CurrentPlanetActivity"
+            android:label="@string/title_activity_current_planet"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".views.BuyGoodsActivity"
+            android:label="@string/title_activity_buy_goods"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".views.SellGoodsActivity"
+            android:label="@string/title_activity_sell_goods"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".views.MenuActivity"
+            android:label="@string/title_activity_menu"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
